--- a/client/src/assets/css/deckStack.css
+++ b/client/src/assets/css/deckStack.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     max-width: 1100px;
-    margin: 10px auto;
+    margin: 50px auto;
     gap: 20px;
     justify-content: space-around;
 }
